frontend/test/should_pass/exectype_VResetUntyped.grg
using exectype;

rule r
{
	modify  {
		exec({vreset(::i)});
	}
}