frontend/test/should_fail/typeof_003.grg
rule r {
    modify {
        a:typeof(b);
        b:typeof(a);
    }
}
